Запилил значит логин и регу вроде как работает допилить шифровку пароля

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.datasource.url=jdbc:postgresql:mysite
 spring.datasource.username=postgres
 spring.datasource.password=p89241735187
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.generate-ddl=false
+#spring.jpa.show-sql=false
+
+
 spring.jpa.show-sql=true
-spring.messages.basename=validation
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
