--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.datasource.url=jdbc:postgresql:mysite
 spring.datasource.username=postgres
 spring.datasource.password=p89241735187
-#spring.jpa.generate-ddl=false
-#spring.jpa.show-sql=false
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
 
 
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+spring.freemarker.expose-request-attributes=true
