--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,18 @@ spring.datasource.url=jdbc:postgresql:mysite
 spring.datasource.username=postgres
 spring.datasource.password=p89241735187
 
-spring.jpa.generate-ddl=true
 
 spring.freemarker.expose-request-attributes=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.flyway.baseline-on-migrate=true
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=psihoz.ykt-spb@yandex.ru
+spring.mail.password=Pp89241735187
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
