--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 spring.datasource.url=jdbc:postgresql:mysite
 spring.datasource.username=postgres
 spring.datasource.password=p89241735187
@@ -11,9 +12,21 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 spring.flyway.baseline-on-migrate=true
 
+
 spring.mail.host=smtp.yandex.ru
 spring.mail.username=psihoz.ykt-spb@yandex.ru
 spring.mail.password=Pp89241735187
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
+
+#Facebook
+spring.social.facebook.app-id=248009015778425
+spring.social.facebook.app-secret=343c8c3406c31d58b7c4d493cfa26bee
+
+com.auth0.domain: psihozykt-mysite.auth0.com
+com.auth0.clientId: HJjhwj4eSOJze38dBz0fsslngbQHrQs6
+com.auth0.clientSecret: dzau0QlVVLYQMpeXzdp9lI0Vv6IJVSgyIiOMHmDU83di0TUS3-0ZrdUEJrQR6BZV
+
+server.port=9000
+
